# arithmetic_named_type

./: CMakeLists.txt  README.md
include/arithmetic_named_type/: arithmetic_named_type.hpp  arithmetic_operators.hpp  arithmetic_type_traits.hpp  bitwise_operators.hpp  bitwise_type_traits.hpp  crtp_helper.hpp  logical_operators.hpp  logical_type_traits.hpp  relational_operators.hpp  relational_type_traits.hpp  type_traits.hpp
test/: CMakeLists.txt  arithmetic_named_type_test.cpp
